--- a/src/com/sonaypet/vista/ListarCitas.form
+++ b/src/com/sonaypet/vista/ListarCitas.form
@@ -25,10 +25,10 @@
     </Container>
   </NonVisualComponents>
   <Properties>
-    <Property name="title" type="java.lang.String" value="Ver Citas"/>
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
       <Border info="null"/>
     </Property>
+    <Property name="title" type="java.lang.String" value="Ver Citas"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -76,9 +76,9 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jScrollPane2" alignment="0" pref="618" max="32767" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="btnEliminar" min="-2" pref="95" max="-2" attributes="0"/>
+                      <Component id="jScrollPane2" pref="618" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="btnEliminar" min="-2" pref="144" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
